@@ -8,7 +8,7 @@
 """
 import gc
 from py.test import raises
-from jinja2 import escape
+from jinja2 import escape, is_undefined
 from jinja2.utils import Cycler
 from jinja2.exceptions import TemplateSyntaxError
 
@@ -97,3 +97,14 @@ def test_cycler():
     assert c.current == 2
     c.reset()
     assert c.current == 1
+
+
+def test_expressions(env):
+    expr = env.compile_expression("foo")
+    assert expr() is None
+    assert expr(foo=42) == 42
+    expr2 = env.compile_expression("foo", undefined_to_none=False)
+    assert is_undefined(expr2())
+
+    expr = env.compile_expression("42 + foo")
+    assert expr(foo=42) == 84
