@@ -41,6 +41,9 @@ Version 2.1
 
 - added a joining helper called `joiner`.
 
+- added a `compile_expression` method to the environment that allows compiling
+  of Jinja expressions into callable Python objects.
+
 Version 2.0
 -----------
 (codename jinjavitus, released on July 17th 2008)
